syntax = "proto3";
package v1;
import "google/protobuf/timestamp.proto";

option go_package = "v1/feedbackreqpb";

message FeedbackRequest {
    string candidate_name = 1;
    string recruiter_name = 2;
    string interview_date = 3;
    //Full-Stack, Java, Dev-ops, UI-developer etc
    string type_of_job = 4;
    bool is_proxy = 5;
    bool is_coding_required = 6;
    bool is_whiteboarding_required = 7;
    bool is_id_required = 8;
    bool is_code_compiled = 9;
    bool is_able_to_write_pseudoCode = 10;
    bool is_whiteboard_done = 11;
    bool is_algo_efficient = 12;
    repeated TechSkill tech_skills = 13;
    string notes_comment = 14;
    google.protobuf.Timestamp creatDate = 15;
    google.protobuf.Timestamp updateDate = 16;

}

message TechSkill {
    int32 skill_rating = 1;
    int32 experience_rating = 2;
    repeated TopicCoveredInSkills topic_covered = 3;
    
}

message TopicCoveredInSkills {
    string topic_name = 1;
    bool is_scenario_covered = 2;
    string what_sceanrio_question = 3;
    bool is_able_to_explain_scenario = 4;
    bool is_able_to_exaplain = 5;
    bool in_depth_understanding = 6;
    bool partially_explained = 7;
    bool is_hands_on = 8;
    bool have_theroretical_knowledge = 9;
}

